release 1.16
- Fixed issue
  OPTIONS call to a webservice method with a "/" in path does not return method element
- Fixed issue JERSEY-1459
  http://java.net/jira/browse/JERSEY-1459
  Unmarshalling error when parsing a JSON message generated from Jira 5.1.x

release 1.15 (10-2012)
- Fixed issue JERSEY-1441
  http://java.net/jira/browse/JERSEY-1441
  Jersey bookstore sample test cases need reactivation
- Fixed issue JERSEY-1440
  http://java.net/jira/browse/JERSEY-1440
  Dead links found in sample READMEs + JERSEY-1440: Dead links found in sample READMEs
- Fixed issue JERSEY-1409
  http://java.net/jira/browse/JERSEY-1409
  Enabled InputStream parameter to be set on a WADL generator by relaxing parameter type check
- Fixed issue JERSEY-1436
  http://java.net/jira/browse/JERSEY-1436
  storage-service example: README clarification
- Fixed issue JERSEY-1433
  http://java.net/jira/browse/JERSEY-1433
  Incorrect implementation of default servlet (Grizzly 2)
- Fixed issue JERSEY-1448
  http://java.net/jira/browse/JERSEY-1448
  Multipart.BodyPart only allowing headers that start with Content-*
- Fixed issue JERSEY-1438
  http://java.net/jira/browse/JERSEY-1438
  Actual WADL generator type classloader should be used when creating JAXBContext for WADL generation
- Fixed issue JERSEY-769
  http://java.net/jira/browse/JERSEY-769
  jersey-json has multiple dependencies on stax-api, breaks deployment in some circumstances
- Fixed issue JERSEY-1426
  http://java.net/jira/browse/JERSEY-1426
  Bad OSGi manifests for jersey-server and jersey-servlet
- Fixed issue JERSEY-1386
  http://java.net/jira/browse/JERSEY-1386
  Applied the patch from Charlie Groves to unwrap WebApplicationException from the Guice ProvisionException.

release 1.14 (09-2012)
- Fixed issue JERSEY-1400
  http://java.net/jira/browse/JERSEY-1400
  Bad format JSON request got Http200(OK)
- Fixed issue JERSEY-759
  http://java.net/jira/browse/JERSEY-759