@@ -39,12 +39,15 @@
  */
 package com.sun.jersey.api.client.filter;
 
+import java.io.UnsupportedEncodingException;
+import java.nio.charset.Charset;
+
+import javax.ws.rs.core.HttpHeaders;
+
 import com.sun.jersey.api.client.ClientHandlerException;
 import com.sun.jersey.api.client.ClientRequest;
 import com.sun.jersey.api.client.ClientResponse;
 import com.sun.jersey.core.util.Base64;
-import java.io.UnsupportedEncodingException;
-import javax.ws.rs.core.HttpHeaders;
 
 /**
  * Client filter adding HTTP Basic Authentication header to the HTTP request,
@@ -55,28 +58,48 @@ import javax.ws.rs.core.HttpHeaders;
 public final class HTTPBasicAuthFilter extends ClientFilter {
 
     private final String authentication;
+    static private final Charset CHARACTER_SET = Charset.forName("iso-8859-1");
 
     /**
      * Creates a new HTTP Basic Authentication filter using provided username
-     * and password credentials
+     * and password credentials. This constructor allows you to avoid storing
+     * plain password value in a String variable.
      *
      * @param username
      * @param password
      */
-    public HTTPBasicAuthFilter(final String username, final String password) {
+    public HTTPBasicAuthFilter(final String username, final byte[] password) {
         try {
-            authentication = "Basic " + new String(Base64.encode(username + ":" + password), "ASCII");
+
+            final byte[] prefix = (username + ":").getBytes(CHARACTER_SET);
+            final byte[] usernamePassword = new byte[prefix.length + password.length];
+
+            System.arraycopy(prefix, 0, usernamePassword, 0, prefix.length);
+            System.arraycopy(password, 0, usernamePassword, prefix.length, password.length);
+
+            authentication = "Basic " + new String(Base64.encode(usernamePassword), "ASCII");
         } catch (UnsupportedEncodingException ex) {
             // This should never occur
             throw new RuntimeException(ex);
         }
     }
 
+    /**
+     * Creates a new HTTP Basic Authentication filter using provided username
+     * and password credentials.
+     *
+     * @param username
+     * @param password
+     */
+    public HTTPBasicAuthFilter(final String username, final String password) {
+        this(username, password.getBytes(CHARACTER_SET));
+    }
+
     @Override
     public ClientResponse handle(final ClientRequest cr) throws ClientHandlerException {
 
-        if (!cr.getMetadata().containsKey(HttpHeaders.AUTHORIZATION)) {
-            cr.getMetadata().add(HttpHeaders.AUTHORIZATION, authentication);
+        if (!cr.getHeaders().containsKey(HttpHeaders.AUTHORIZATION)) {
+            cr.getHeaders().add(HttpHeaders.AUTHORIZATION, authentication);
         }
         return getNext().handle(cr);
     }
