@@ -98,27 +98,29 @@ public class HTTPDigestAuthFilterTest extends AbstractGrizzlyServerTester {
                         getDigestAuthHeaderValue(authHeader, "qop="),
                         HA2);
 
-                if (response.equals(getDigestAuthHeaderValue(authHeader, "response=")))
+                if (response.equals(getDigestAuthHeaderValue(authHeader, "response="))) {
                     return Response.ok().build();
-                else
+                } else {
                     return Response.status(401).build();
-
+                }
             }
         }
 
         static String getDigestAuthHeaderValue(String authHeader, String keyName) {
             int i1 = authHeader.indexOf(keyName);
 
-            if (i1 == -1)
+            if (i1 == -1) {
                 return null;
+            }
 
             String value = authHeader.substring(authHeader.indexOf('=', i1) + 1,
                     (authHeader.indexOf(',', i1) != -1 ? authHeader.indexOf(',', i1) : authHeader.length())
             );
 
             value = value.trim();
-            if (value.charAt(0) == '"' && value.charAt(value.length() - 1) == '"')
+            if (value.charAt(0) == '"' && value.charAt(value.length() - 1) == '"') {
                 value = value.substring(1, value.length() - 1);
+            }
 
             return value;
         }
@@ -157,15 +159,16 @@ public class HTTPDigestAuthFilterTest extends AbstractGrizzlyServerTester {
      * Converts array of bytes in hexadecimal format
      */
     private static String convertToHex(byte[] data) {
-        StringBuffer buf = new StringBuffer();
+        StringBuilder buf = new StringBuilder();
         for (int i = 0; i < data.length; i++) {
             int halfbyte = (data[i] >>> 4) & 0x0F;
             int two_halfs = 0;
             do {
-                if ((0 <= halfbyte) && (halfbyte <= 9))
+                if ((0 <= halfbyte) && (halfbyte <= 9)) {
                     buf.append((char) ('0' + halfbyte));
-                else
+                } else {
                     buf.append((char) ('a' + (halfbyte - 10)));
+                }
                 halfbyte = data[i] & 0x0F;
             } while (two_halfs++ < 1);
         }
@@ -179,7 +182,7 @@ public class HTTPDigestAuthFilterTest extends AbstractGrizzlyServerTester {
         try {
             MessageDigest md;
             md = MessageDigest.getInstance("MD5");
-            byte[] md5hash = new byte[32];
+            byte[] md5hash;
             md.update(text.getBytes("iso-8859-1"), 0, text.length());
             md5hash = md.digest();
             String result = convertToHex(md5hash);
@@ -195,7 +198,7 @@ public class HTTPDigestAuthFilterTest extends AbstractGrizzlyServerTester {
     static String concatMD5(String... vals) {
 
         // Loop on vals : populate a buffer
-        StringBuffer buff = new StringBuffer();
+        StringBuilder buff = new StringBuilder();
         for (String val : vals) {
             buff.append(val);
             buff.append(':');
